# Backend/app/Http/Controllers/Apis/OrderController.php
@@ -7,6 +7,7 @@ use Illuminate\Http\Request;
 use App\Models\Order;
 use App\Models\OrderDetail;
 use App\Models\Payment;
+use App\Http\Requests\OrderRequest;
 
 class OrderController extends Controller
 {
@@ -14,6 +15,7 @@ class OrderController extends Controller
      * @OA\Get(
      *     path="/api/v1/orders",
      *     tags={"Orders"},
+     *     security={{"bearerAuth": {}}},
      *     summary="Get a list of orders",
      *     description="Returns a list of orders with their details, payment information, and associated user.",
      *     @OA\Response(
@@ -80,6 +82,7 @@ class OrderController extends Controller
      *     path="/api/v1/orders/{id}",
      *     tags={"Orders"},
      *     summary="Get order by ID",
+     *     security={{"bearerAuth": {}}},
      *     description="Returns the order details for a specific order ID.",
      *     @OA\Parameter(
      *         name="id",
@@ -157,6 +160,7 @@ class OrderController extends Controller
      *     summary="Checkout an order",
      *     description="Create a new order along with its details and payment information.",
      *     tags={"Orders"},
+     *     security={{"bearerAuth": {}}},
      *     @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
@@ -168,6 +172,8 @@ class OrderController extends Controller
      *             @OA\Property(property="payment_method", type="string", example="credit_card", description="Method of payment"),
      *             @OA\Property(property="payment_date", type="string", format="date-time", example="2024-05-28T14:00:00Z", description="Date and time of payment"),
      *             @OA\Property(property="payment_status", type="string", example="completed", description="Status of the payment"),
+     *             @OA\Property(property="order_note", type="string", example="Order note", description="Order note"),
+     *             @OA\Property(property="number_phone", type="string", example="0123456789", description="Number phone"),
      *             @OA\Property(
      *                 property="order_details",
      *                 type="array",
@@ -199,21 +205,9 @@ class OrderController extends Controller
      *     )
      * )
      */
-    public function store(Request $request) {
+    public function store(OrderRequest $request) {
         try {
-            $request->validate([
-                'user_id' => 'required|integer',
-                'total_amount' => 'required|numeric',
-                'shipping_money' => 'required|numeric',
-                'shipping_address' => 'required|string',
-                'payment_method' => 'required|string',
-                'payment_date' => 'required|date',
-                'payment_status' => 'required|string',
-                'order_details' => 'required|array',
-                'order_details.*.product_id' => 'required|integer',
-                'order_details.*.quantity' => 'required|integer|min:1',
-                'order_details.*.price' => 'required|numeric|min:0',
-            ]);
+            $request->validated();
     
             $order_details = $request->input('order_details');
             $amount = $request->input('total_amount') + $request->input('shipping_money');
@@ -224,6 +218,8 @@ class OrderController extends Controller
                 'total_amount' => $request->input('total_amount'),
                 'shipping_address' => $request->input('shipping_address'),
                 'shipping_money' => $request->input('shipping_money'),
+                'number_phone' => $request->input('phone_number'),
+                'order_note' => $request->input('order_note') ?? '',
             ]);
     
             foreach ($order_details as $item) {
@@ -254,6 +250,7 @@ class OrderController extends Controller
      * @OA\Put(
      *     path="/api/v1/orders/{id}/status",
      *     tags={"Orders"},
+     *     security={{"bearerAuth": {}}},
      *     summary="Update order status",
      *     description="Updates the status of a specific order by its ID. The status can be one of the following: pending, processing, shipped, cancelled, delivered.",
      *     @OA\Parameter(
